update style: footer, index, readme e img

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <h1>ceproirr</h1>
                     <img class="img_photo" src="img/photo.jpeg" alt="Logo da Empresa"/>
                     <p>Quer ser aprovado(a) na etapa de entrevista?<br>
-                        preenchar o formulário ao lado e garanta sua vaga na 1ª Live: Entrevista, o Caucanhar de Aquilies!</p>
+                        preencha o formulário ao lado e garanta sua vaga na 1ª Live: Entrevista, o Caucanhar de Aquilies!</p>
                 </div>
             </div>
             <div class="content">
